actually removed bg-attachment fixed this time and added max width and no overflow

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,5 @@
     z-index: -1;
     background-image: url('../public/bg_dark.png');
     background-repeat: no-repeat;
-    background-attachment: fixed;
     background-position: top center;
 }
